--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     background-color: antiquewhite;
 }
 nav {
-    background-color: #c90000;
+    background-color: red;
     padding: 25px;
     text-align: center;
 }
@@ -16,7 +16,7 @@ nav ul {
     list-style-type: none;
 }
 nav a {
-    color: #ffcf00;
+    color: yellow;
     text-decoration: none;
     padding: 25px;
     font-size: 30px;
@@ -29,23 +29,40 @@ h1 {
 .blocks {
     display: flex;
     justify-content: space-around;
-    padding: 15px;
+    padding: 90px;
     background-color: #00c6c6;
+    
 }
 .block {
     background-color: white;
     width: 400px;
     text-align: center;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 1.0);
 }
 .block img {
     width: 200px;
+}
+.buttons {
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    
+}
+.button button {
+    border: none;
+    background-color: white;
+    padding: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 .info {
     padding: 15px;
 }
 .info h4 {
     margin: 5px;
+}
+main {
+    padding: 40px;
 }
 .logo {
     text-align: center;
@@ -89,6 +106,10 @@ footer {
 .ico img {
     width: 100px;
     margin: 15px;
+    transition: 0.7s;
+}
+.ico img:hover {
+    transform: scale(1.1);
 }
 .text {
     background-color: #464646;
@@ -101,7 +122,7 @@ footer {
     padding: 15px;
     border: 1px solid #ccc;
     background-color: white;
-    max-height: 300px;
+    max-height: 450px;
     overflow-y: auto;
     color: black;
 }
@@ -109,6 +130,13 @@ footer {
     padding: 10px;
     margin-bottom: 5px;
     border-radius: 5px;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+.message.show {
+    opacity: 1;
+    transform: translateY(0);
 }
 .user {
     background-color: #c90000;
@@ -121,6 +149,7 @@ footer {
 @media (max-width: 768px) {
     .blocks {
         display: block;
+        padding: 15px;
     }
     .block {
         margin: 0 auto;
@@ -132,5 +161,11 @@ footer {
     }
     #chat-box {
         max-width: 95%;
+    }
+    main {
+        padding: 0;
+    }
+    .medicine button {
+        display: none;
     }
 }
